--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
-    "react-dropzone": "^10.2.1",
     "react-intl": "^3.9.2",
     "react-router-dom": "^5.1.2",
+    "react-router-transition": "^2.0.0",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1"
