--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
     "react-intl": "^3.9.2",
+    "react-mapbox-gl": "^4.8.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
