--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.35",
     "@progress/kendo-react-dropdowns": "^3.9.0",
     "@progress/kendo-react-intl": "^3.9.0",
+    "@react-google-maps/api": "^1.8.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
