--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
-    "eslint-plugin-prettier": "^3.1.2",
     "google-maps-react": "^2.0.2",
     "mapbox-gl": "^1.6.1",
     "node-sass": "^4.13.0",
@@ -59,6 +58,8 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0"
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "prettier": "^2.0.2"
   }
 }
