--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-  "name": "wajjbat-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.35",
-    "@progress/kendo-react-dropdowns": "^3.9.0",
-    "@progress/kendo-react-intl": "^3.9.0",
-    "@react-google-maps/api": "^1.8.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.0",
-    "google-maps-react": "^2.0.2",
-    "mapbox-gl": "^1.6.1",
-    "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^10.2.1",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.0.7",
-    "react-intl": "^3.9.2",
-    "react-mapbox-gl": "^4.8.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1",
-    "universal-cookie": "^4.0.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "prettier": "^2.0.2"
-  }
+    "name": "wajjbat-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^4.7.2",
+        "@material-ui/icons": "^4.5.1",
+        "@material-ui/lab": "^4.0.0-alpha.35",
+        "@progress/kendo-react-dropdowns": "^3.9.0",
+        "@progress/kendo-react-intl": "^3.9.0",
+        "@react-google-maps/api": "^1.8.2",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.19.0",
+        "google-maps-react": "^2.0.2",
+        "mapbox-gl": "^1.6.1",
+        "node-sass": "^4.13.0",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-dropzone": "^10.2.1",
+        "react-facebook-login": "^4.1.1",
+        "react-google-login": "^5.0.7",
+        "react-intl": "^3.9.2",
+        "react-mapbox-gl": "^4.8.2",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "3.3.0",
+        "react-slick": "^0.25.2",
+        "slick-carousel": "^1.8.1",
+        "universal-cookie": "^4.0.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "eslint ./src",
+        "start-sw": "http-server ./build"
+
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "babel-eslint": "^10.0.3",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.17.0",
+        "prettier": "^2.0.2"
+    }
 }
