--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,12 @@
     "short_name": "Wajbat",
     "name": "Wajbat",
     "icons": [{
-            "src": "favicon.ico",
+            "src": "Wajbat-Transparent.PNG",
             "sizes": "64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         },
         {
-            "src": "logo192.png",
+            "src": "Wajbat-Transparent.PNG",
             "type": "image/png",
             "sizes": "192x192"
         },
