--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@progress/kendo-react-dropdowns": "^3.9.0",
         "@progress/kendo-react-intl": "^3.9.0",
         "@react-google-maps/api": "^1.8.2",
+        "@stripe/react-stripe-js": "^1.1.2",
+        "@stripe/stripe-js": "^1.3.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
